Fix weather details text alignment

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -196,6 +196,8 @@ main {
 
 .weather-details {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 5px;
 }
 
